Убрана шапка приложения - чистый дизайн

--- a/www/index.html
+++ b/www/index.html
@@ -32,25 +32,7 @@
         }
 
         .app-bar {
-            height: 56px;
-            background: #6200ea;
-            display: flex;
-            align-items: center;
-            padding: 0 16px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .app-bar h1 {
-            color: white;
-            font-size: 20px;
-            font-weight: 500;
-            margin-left: 8px;
-        }
-
-        .menu-icon {
-            color: white;
-            cursor: pointer;
-            font-size: 24px;
+            display: none;
         }
 
         .content {
@@ -58,6 +40,7 @@
             padding-bottom: 80px;
             max-width: 600px;
             margin: 0 auto;
+            padding-top: 24px;
         }
 
         .recipes-stories {
@@ -318,10 +301,7 @@
 <body>
 
 
-    <div class="app-bar">
-        <span class="menu-icon">≡</span>
-        <h1 id="appTitle">Список покупок</h1>
-    </div>
+
 
     <div class="content">
         <div class="recipes-stories">
